// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownAutoCompleteMenu renders with a group 1`] = `
<DropdownAutoCompleteMenu
  blendCorner={true}
  emptyMessage="No items"
  isOpen={true}
  items={
    Array [
      Object {
        "id": "countries",
        "items": Array [
          Object {
            "label": <div>
              New Zealand
            </div>,
            "value": "new zealand",
          },
          Object {
            "label": <div>
              Australia
            </div>,
            "value": "australia",
          },
        ],
        "label": "countries",
        "value": "countries",
      },
    ]
  }
  maxHeight={300}
  onSelect={[Function]}
  searchPlaceholder="Filter search"
>
  <AutoComplete
    closeOnSelect={true}
    disabled={false}
    inputIsActor={false}
    isOpen={true}
    itemToString={[Function]}
    onSelect={[Function]}
    resetInputOnClose={true}
    shouldSelectWithEnter={true}
    shouldSelectWithTab={false}
  >
    <DropdownMenu
      closeOnEscape={true}
      isOpen={true}
      keepMenuOpen={false}
      onClickOutside={[Function]}
    >
      <AutoCompleteRoot>
        <Component
          className="css-6v04yn-AutoCompleteRoot egdot0r0"
        >
          <div
            className="css-6v04yn-AutoCompleteRoot egdot0r0"
          >
            Click Me!
            <BubbleWithMinWidth
              blendCorner={true}
              innerRef={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
<<<<<<< HEAD
                className="css-1w57aoy-DropdownBubble-getMenuBorderRadius-BubbleWithMinWidth ejumqxq11"
=======
<<<<<<< HEAD
                className="css-1w57aoy-DropdownBubble-getMenuBorderRadius-BubbleWithMinWidth ejumqxq10"
=======
                className="css-1fwqu7l-StyledMenu-getMenuBorderRadius egdot0r8"
>>>>>>> build(travis): yarn --pnp [WIP]
>>>>>>> build(travis): yarn --pnp [WIP]
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <StyledInputWrapper>
<<<<<<< HEAD
                  <div
                    className="css-3qvqqu-StyledInputWrapper ejumqxq2"
                  >
                    <StyledInput
                      autoFocus={true}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Filter search"
                      value=""
=======
                  <Base
                    className="css-8ql7bl-StyledInputWrapper egdot0r2"
                  >
                    <div
                      className="css-8ql7bl-StyledInputWrapper egdot0r2"
                      is={null}
>>>>>>> build(travis): yarn --pnp [WIP]
                    >
                      <input
                        autoFocus={true}
                        className="css-w10g4i-Input-inputStyles-StyledInput ejumqxq3"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Filter search"
                        value=""
<<<<<<< HEAD
                      />
                    </StyledInput>
                    <InputLoadingWrapper>
                      <div
                        className="css-kha9qr-InputLoadingWrapper ejumqxq1"
                      />
                    </InputLoadingWrapper>
                  </div>
=======
                      >
                        <input
                          autoFocus={true}
<<<<<<< HEAD
                          className="css-1rdiewf-Input-inputStyles-StyledInput ejumqxq3"
=======
                          className="css-dqpq6t-Input-inputStyles-StyledInput egdot0r3"
>>>>>>> build(travis): yarn --pnp [WIP]
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Filter search"
                          value=""
                        />
                      </StyledInput>
                      <InputLoadingWrapper>
                        <Base
                          className="css-7dbbu3-InputLoadingWrapper egdot0r1"
                        >
                          <div
                            className="css-7dbbu3-InputLoadingWrapper egdot0r1"
                            is={null}
                          />
                        </Base>
                      </InputLoadingWrapper>
                    </div>
                  </Base>
>>>>>>> build(travis): yarn --pnp [WIP]
                </StyledInputWrapper>
                <div>
                  <StyledItemList
                    data-test-id="autocomplete-list"
                    maxHeight={300}
                  >
                    <div
<<<<<<< HEAD
                      className="css-5kh8cy-StyledItemList ejumqxq8"
                      data-test-id="autocomplete-list"
=======
                      className="css-5kh8cy-StyledItemList egdot0r9"
>>>>>>> build(travis): yarn --pnp [WIP]
                    >
                      <LabelWithBorder
                        key="countries"
                      >
                        <div
<<<<<<< HEAD
                          className="css-1lqzols-LabelWithBorder ejumqxq5"
=======
                          className="css-o8s6pc-LabelWithBorder egdot0r5"
>>>>>>> build(travis): yarn --pnp [WIP]
                        >
                          <GroupLabel>
                            <div
                              className="css-1oz0skv-GroupLabel egdot0r7"
                            >
                              countries
                            </div>
                          </GroupLabel>
                        </div>
                      </LabelWithBorder>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={0}
                        key="new zealand-0"
                        onClick={[Function]}
                      >
                        <div
<<<<<<< HEAD
                          className="css-ahi473-AutoCompleteItem ejumqxq4"
=======
                          className="css-1dzvpw9-AutoCompleteItem egdot0r4"
>>>>>>> build(travis): yarn --pnp [WIP]
                          onClick={[Function]}
                        >
                          <div>
                            New Zealand
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={1}
                        key="australia-1"
                        onClick={[Function]}
                      >
                        <div
<<<<<<< HEAD
                          className="css-4bvl26-AutoCompleteItem ejumqxq4"
=======
                          className="css-1sp52yo-AutoCompleteItem egdot0r4"
>>>>>>> build(travis): yarn --pnp [WIP]
                          onClick={[Function]}
                        >
                          <div>
                            Australia
                          </div>
                        </div>
                      </AutoCompleteItem>
                    </div>
                  </StyledItemList>
                </div>
              </div>
            </BubbleWithMinWidth>
          </div>
        </Component>
      </AutoCompleteRoot>
    </DropdownMenu>
  </AutoComplete>
</DropdownAutoCompleteMenu>
`;

exports[`DropdownAutoCompleteMenu renders without a group 1`] = `
<DropdownAutoCompleteMenu
  blendCorner={true}
  emptyMessage="No items"
  isOpen={true}
  items={
    Array [
      Object {
        "label": <div>
          Apple
        </div>,
        "value": "apple",
      },
      Object {
        "label": <div>
          Bacon
        </div>,
        "value": "bacon",
      },
      Object {
        "label": <div>
          Corn
        </div>,
        "value": "corn",
      },
    ]
  }
  maxHeight={300}
  onSelect={[Function]}
  searchPlaceholder="Filter search"
>
  <AutoComplete
    closeOnSelect={true}
    disabled={false}
    inputIsActor={false}
    isOpen={true}
    itemToString={[Function]}
    onSelect={[Function]}
    resetInputOnClose={true}
    shouldSelectWithEnter={true}
    shouldSelectWithTab={false}
  >
    <DropdownMenu
      closeOnEscape={true}
      isOpen={true}
      keepMenuOpen={false}
      onClickOutside={[Function]}
    >
      <AutoCompleteRoot>
        <Component
          className="css-6v04yn-AutoCompleteRoot egdot0r0"
        >
          <div
            className="css-6v04yn-AutoCompleteRoot egdot0r0"
          >
            Click Me!
            <BubbleWithMinWidth
              blendCorner={true}
              innerRef={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
<<<<<<< HEAD
                className="css-1w57aoy-DropdownBubble-getMenuBorderRadius-BubbleWithMinWidth ejumqxq11"
=======
<<<<<<< HEAD
                className="css-1w57aoy-DropdownBubble-getMenuBorderRadius-BubbleWithMinWidth ejumqxq10"
=======
                className="css-1fwqu7l-StyledMenu-getMenuBorderRadius egdot0r8"
>>>>>>> build(travis): yarn --pnp [WIP]
>>>>>>> build(travis): yarn --pnp [WIP]
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <StyledInputWrapper>
<<<<<<< HEAD
                  <div
                    className="css-3qvqqu-StyledInputWrapper ejumqxq2"
                  >
                    <StyledInput
                      autoFocus={true}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Filter search"
                      value=""
=======
                  <Base
                    className="css-8ql7bl-StyledInputWrapper egdot0r2"
                  >
                    <div
                      className="css-8ql7bl-StyledInputWrapper egdot0r2"
                      is={null}
>>>>>>> build(travis): yarn --pnp [WIP]
                    >
                      <input
                        autoFocus={true}
                        className="css-w10g4i-Input-inputStyles-StyledInput ejumqxq3"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Filter search"
                        value=""
<<<<<<< HEAD
                      />
                    </StyledInput>
                    <InputLoadingWrapper>
                      <div
                        className="css-kha9qr-InputLoadingWrapper ejumqxq1"
                      />
                    </InputLoadingWrapper>
                  </div>
=======
                      >
                        <input
                          autoFocus={true}
<<<<<<< HEAD
                          className="css-1rdiewf-Input-inputStyles-StyledInput ejumqxq3"
=======
                          className="css-dqpq6t-Input-inputStyles-StyledInput egdot0r3"
>>>>>>> build(travis): yarn --pnp [WIP]
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Filter search"
                          value=""
                        />
                      </StyledInput>
                      <InputLoadingWrapper>
                        <Base
                          className="css-7dbbu3-InputLoadingWrapper egdot0r1"
                        >
                          <div
                            className="css-7dbbu3-InputLoadingWrapper egdot0r1"
                            is={null}
                          />
                        </Base>
                      </InputLoadingWrapper>
                    </div>
                  </Base>
>>>>>>> build(travis): yarn --pnp [WIP]
                </StyledInputWrapper>
                <div>
                  <StyledItemList
                    data-test-id="autocomplete-list"
                    maxHeight={300}
                  >
                    <div
<<<<<<< HEAD
                      className="css-5kh8cy-StyledItemList ejumqxq8"
                      data-test-id="autocomplete-list"
=======
                      className="css-5kh8cy-StyledItemList egdot0r9"
>>>>>>> build(travis): yarn --pnp [WIP]
                    >
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={0}
                        key="apple-0"
                        onClick={[Function]}
                      >
                        <div
<<<<<<< HEAD
                          className="css-ahi473-AutoCompleteItem ejumqxq4"
=======
                          className="css-1dzvpw9-AutoCompleteItem egdot0r4"
>>>>>>> build(travis): yarn --pnp [WIP]
                          onClick={[Function]}
                        >
                          <div>
                            Apple
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={1}
                        key="bacon-1"
                        onClick={[Function]}
                      >
                        <div
<<<<<<< HEAD
                          className="css-4bvl26-AutoCompleteItem ejumqxq4"
=======
                          className="css-1sp52yo-AutoCompleteItem egdot0r4"
>>>>>>> build(travis): yarn --pnp [WIP]
                          onClick={[Function]}
                        >
                          <div>
                            Bacon
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={2}
                        key="corn-2"
                        onClick={[Function]}
                      >
                        <div
<<<<<<< HEAD
                          className="css-4bvl26-AutoCompleteItem ejumqxq4"
=======
                          className="css-1sp52yo-AutoCompleteItem egdot0r4"
>>>>>>> build(travis): yarn --pnp [WIP]
                          onClick={[Function]}
                        >
                          <div>
                            Corn
                          </div>
                        </div>
                      </AutoCompleteItem>
                    </div>
                  </StyledItemList>
                </div>
              </div>
            </BubbleWithMinWidth>
          </div>
        </Component>
      </AutoCompleteRoot>
    </DropdownMenu>
  </AutoComplete>
</DropdownAutoCompleteMenu>
`;

exports[`DropdownAutoCompleteMenu selects 1`] = `[MockFunction]`;
